fix elastic scrolling on safari

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,10 +5,12 @@
 @import './lato.scss';
 
 body, html {
-  width:   100%;
-  height:  100%;
-  margin:  0;
-  padding: 0;
+  width:    100%;
+  height:   100%;
+  margin:   0;
+  padding:  0;
+  position: relative;
+  overflow: hidden;
 }
 
 #__next {
